OSSM/1_32/must-gather.local.7013786599205061846/registry-redhat-io-openshift-serverless-1-svls-must-gather-rhel8-sha256-9b7d97cc846f3696675d139e61011364fff4a62e700cb54be77f443b8d49d7cc/namespaces/knative-serving/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"creationTimestamp":null,"labels":{"networking.knative.dev/ingress-provider":"istio"},"name":"allow-from-openshift-monitoring-ns","namespace":"knative-serving","ownerReferences":[{"apiVersion":"operator.knative.dev/v1beta1","blockOwnerDeletion":true,"controller":true,"kind":"KnativeServing","name":"knative-serving","uid":"af223c8b-7d90-440e-8659-7268e406b26c"}]},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matc [...]
      manifestival: new
    creationTimestamp: "2024-06-05T10:55:59Z"
    generation: 1
    labels:
      networking.knative.dev/ingress-provider: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:manifestival: {}
          f:labels:
            .: {}
            f:networking.knative.dev/ingress-provider: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"af223c8b-7d90-440e-8659-7268e406b26c"}: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: manifestival
      operation: Update
      time: "2024-06-05T10:56:17Z"
    name: allow-from-openshift-monitoring-ns
    namespace: knative-serving
    ownerReferences:
    - apiVersion: operator.knative.dev/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: KnativeServing
      name: knative-serving
      uid: af223c8b-7d90-440e-8659-7268e406b26c
    resourceVersion: "42012"
    uid: b1865db1-86d9-484a-a8c3-c75e71d9ca21
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-monitoring
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:46:22Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.7
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:46:22Z"
    name: istio-expose-route-basic
    namespace: knative-serving
    resourceVersion: "35746"
    uid: 551ebf0c-27a3-4034-9f5f-45f416fcfbb0
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector:
      matchLabels:
        maistra.io/expose-route: "true"
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:46:22Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.7
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:46:22Z"
    name: istio-mesh-basic
    namespace: knative-serving
    resourceVersion: "35748"
    uid: 0876f206-7637-4cc3-a5b4-d63444f9cbc2
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            maistra.io/member-of: istio-system
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"creationTimestamp":null,"labels":{"app":"net-istio-webhook","networking.knative.dev/ingress-provider":"istio"},"name":"net-istio-webhook","namespace":"knative-serving","ownerReferences":[{"apiVersion":"operator.knative.dev/v1beta1","blockOwnerDeletion":true,"controller":true,"kind":"KnativeServing","name":"knative-serving","uid":"af223c8b-7d90-440e-8659-7268e406b26c"}]},"spec":{"ingress":[{}],"podSelector":{"matchLa [...]
      manifestival: new
    creationTimestamp: "2024-06-05T10:55:59Z"
    generation: 1
    labels:
      app: net-istio-webhook
      networking.knative.dev/ingress-provider: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:manifestival: {}
          f:labels:
            .: {}
            f:app: {}
            f:networking.knative.dev/ingress-provider: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"af223c8b-7d90-440e-8659-7268e406b26c"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: manifestival
      operation: Update
      time: "2024-06-05T10:56:17Z"
    name: net-istio-webhook
    namespace: knative-serving
    ownerReferences:
    - apiVersion: operator.knative.dev/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: KnativeServing
      name: knative-serving
      uid: af223c8b-7d90-440e-8659-7268e406b26c
    resourceVersion: "42011"
    uid: aff2d1b0-a72a-4a96-acac-1a18ee631ee9
  spec:
    ingress:
    - {}
    podSelector:
      matchLabels:
        app: net-istio-webhook
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"creationTimestamp":null,"labels":{"app":"webhook","networking.knative.dev/ingress-provider":"istio"},"name":"webhook","namespace":"knative-serving","ownerReferences":[{"apiVersion":"operator.knative.dev/v1beta1","blockOwnerDeletion":true,"controller":true,"kind":"KnativeServing","name":"knative-serving","uid":"af223c8b-7d90-440e-8659-7268e406b26c"}]},"spec":{"ingress":[{}],"podSelector":{"matchLabels":{"app":"webhoo [...]
      manifestival: new
    creationTimestamp: "2024-06-05T10:55:59Z"
    generation: 1
    labels:
      app: webhook
      networking.knative.dev/ingress-provider: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:manifestival: {}
          f:labels:
            .: {}
            f:app: {}
            f:networking.knative.dev/ingress-provider: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"af223c8b-7d90-440e-8659-7268e406b26c"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: manifestival
      operation: Update
      time: "2024-06-05T10:56:17Z"
    name: webhook
    namespace: knative-serving
    ownerReferences:
    - apiVersion: operator.knative.dev/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: KnativeServing
      name: knative-serving
      uid: af223c8b-7d90-440e-8659-7268e406b26c
    resourceVersion: "42009"
    uid: f1de89df-5c6e-45c4-8a99-375bf12930e1
  spec:
    ingress:
    - {}
    podSelector:
      matchLabels:
        app: webhook
    policyTypes:
    - Ingress
kind: NetworkPolicyList
metadata:
  resourceVersion: "53940"
